# RustCall.jl

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Manifest.toml  Project.toml  README.md
.devcontainer/: devcontainer.json  post-create.sh
benchmark/: benchmarks.jl  benchmarks_arrays.jl  benchmarks_generics.jl  benchmarks_llvm.jl  benchmarks_ownership.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: BUG.md  ERROR_HANDLING.md  Manifest.toml  Project.toml  STATUS.md  TUTORIAL.md  make.jl  make_lite.jl  troubleshooting.md
examples/: README.md  advanced_examples.jl  basic_examples.jl  julia_to_rust_generic.jl  julia_to_rust_simple.jl  julia_to_rust_struct.jl  ownership_examples.jl  phase4_prototype.jl
examples/sample_crate/: Cargo.toml  README.md  example.ipynb  example.jl
examples/sample_crate/src/: lib.rs
examples/sample_crate_pyo3/: Cargo.toml  README.md  main.jl
examples/sample_crate_pyo3/src/: lib.rs
scripts/: lint_interpolation.sh
src/: LastCall.jl  RustCall.jl  cache.jl  cargobuild.jl  cargoproject.jl  codegen.jl  compiler.jl  crate_bindings.jl  dependencies.jl  dependency_resolution.jl  exceptions.jl  generics.jl  hot_reload.jl  julia_functions.jl  llvmcodegen.jl  llvmintegration.jl  llvmoptimization.jl  memory.jl  rustmacro.jl  ruststr.jl  structs.jl  types.jl  typetranslation.jl
test/: runtests.jl  test_advanced_examples.jl  test_arrays.jl  test_basic_examples.jl  test_cache.jl  test_cargo.jl  test_core_api.jl  test_crate_bindings.jl  test_dependencies.jl  test_docs_examples.jl  test_error_handling.jl  test_external_crates.jl  test_generic_struct.jl  (+19 more)
(+776 files in other folders)
