[package]
name = "sample_crate"
version = "0.1.0"
edition = "2021"
description = "Sample crate for testing LastCall.jl crate bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use local path for development; will be crates.io in production
lastcall_macros = { path = "../../deps/lastcall_macros" }
