[package]
name = "sample_crate"
version = "0.1.0"
edition = "2021"
description = "Sample crate for testing RustCall.jl crate bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use local path for development; will be crates.io in production
rustcall_macros = { path = "../../deps/rustcall_macros" }
