[package]
name = "sample_crate_pyo3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustcall_macros = { path = "../../deps/rustcall_macros" }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[features]
default = []
# Enable Python bindings - forwards feature to rustcall_macros
python = ["pyo3", "rustcall_macros/python"]
