[package]
name = "sample_crate_pyo3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
juliacall_macros = { path = "../../deps/juliacall_macros" }
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[features]
default = []
# Enable Python bindings - forwards feature to juliacall_macros
python = ["pyo3", "juliacall_macros/python"]
